samples/_failures_safe/1761308393_9f97bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba81fefb.c: In function ‘main’:
./samples/SAFE/__tmp_ba81fefb.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\n");
      |     ^~~~~~
